<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/layout_content_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/toolbar_tab"/>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#fff">
            <TextView
                android:layout_weight="100"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_num"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tv_user_num"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="无"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#fff">
            <TextView
                android:layout_weight="100"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/et_old_password"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_old_password"
                android:lines="1"
                android:inputType="textPassword"
                android:maxLength="15"
                android:singleLine="true"
                android:background="@null"
                android:gravity="end"
                android:textCursorDrawable="@null"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#e1e1e1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#fff">
            <TextView
                android:layout_weight="100"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/et_new_password"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_limit"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="15"
                android:singleLine="true"
                android:background="@null"
                android:gravity="end"
                android:textCursorDrawable="@null"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#e1e1e1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#fff">
            <TextView
                android:layout_weight="100"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sure_password"
                android:layout_gravity="center_vertical"
                android:textColor="#000"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/et_sure_new_password"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/second_input_new_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="15"
                android:singleLine="true"
                android:background="@null"
                android:gravity="end"
                android:textCursorDrawable="@null"
                android:layout_gravity="center_vertical"
                android:textSize="14sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#e1e1e1"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_change_password"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#fff"
        android:text="@string/password_change"
        android:background="@drawable/background_loginbt"/>
</RelativeLayout>