<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="#334856"
    android:gravity="center_vertical">
    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="0dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/logo_login" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:text="i Competition"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="36sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/background_ellipse">
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/et_register_userID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:lines="1"
                    android:hint="@string/register_userid"
                    android:singleLine="true"
                    android:background="@null"
                    android:inputType="phone"
                    android:gravity="start|center_vertical"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_ellipse">
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/register_password"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:lines="1"
                    android:gravity="start|center_vertical"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_ellipse">
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/et_register_surepassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/register_surepassword"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:lines="1"
                    android:gravity="start|center_vertical"
                    android:textCursorDrawable="@null"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="注册"
            android:textColor="#fff"
            android:textSize="20sp"
            android:background="@drawable/background_loginbt" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="right">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_haveuser"
                android:textColor="#D97D54"/>
            <TextView
                android:id="@+id/tv_register_tologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/register_gotologin"
                android:textColor="#D97D54"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>